[package]
name = "wincolor"
version = "1.0.3"
authors = [ "Andrew Gallant <jamslam@gmail.com>",]
description = "DEPRECATED. Use winapi-util instead."
documentation = "https://docs.rs/wincolor"
homepage = "https://github.com/BurntSushi/termcolor/tree/master/wincolor"
repository = "https://github.com/BurntSushi/termcolor/tree/master/wincolor"
readme = "README.md"
keywords = [ "windows", "win", "color", "ansi", "console",]
license = "Unlicense OR MIT"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "wincolor"
bench = false

[dependencies]
winapi-util = "0.1.9"

[dependencies.winapi]
version = "0.3.9"
features = [ "minwindef", "wincon",]
